syntax = "proto3";
package osmosis.concentratedliquidity;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/osmosis-labs/osmosis/v21/x/concentrated-liquidity/types";

message Params {
  // authorized_tick_spacing is an array of uint64s that represents the tick
  // spacing values concentrated-liquidity pools can be created with. For
  // example, an authorized_tick_spacing of [1, 10, 30] allows for pools
  // to be created with tick spacing of 1, 10, or 30.
  repeated uint64 authorized_tick_spacing = 1
      [ (gogoproto.moretags) = "yaml:\"authorized_tick_spacing\"" ];
  repeated string authorized_spread_factors = 2 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"authorized_spread_factors\"",
    (gogoproto.nullable) = false
  ];
  // balancer_shares_reward_discount is the rate by which incentives flowing
  // from CL to Balancer pools will be discounted to encourage LPs to migrate.
  // e.g. a rate of 0.05 means Balancer LPs get 5% less incentives than full
  // range CL LPs.
  // This field can range from (0,1]. If set to 1, it indicates that all
  // incentives stay at cl pool.
  string balancer_shares_reward_discount = 3 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"balancer_shares_reward_discount\"",
    (gogoproto.nullable) = false
  ];
  // authorized_quote_denoms is a list of quote denoms that can be used as
  // token1 when creating a pool. We limit the quote assets to a small set for
  // the purposes of having convenient price increments stemming from tick to
  // price conversion. These increments are in a human readable magnitude only
  // for token1 as a quote. For limit orders in the future, this will be a
  // desirable property in terms of UX as to allow users to set limit orders at
  // prices in terms of token1 (quote asset) that are easy to reason about.
  repeated string authorized_quote_denoms = 4
      [ (gogoproto.moretags) = "yaml:\"authorized_quote_denoms\"" ];
  repeated google.protobuf.Duration authorized_uptimes = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration,omitempty",
    (gogoproto.moretags) = "yaml:\"authorized_uptimes\""
  ];

  // is_permissionless_pool_creation_enabled is a boolean that determines if
  // concentrated liquidity pools can be created via message. At launch,
  // we consider allowing only governance to create pools, and then later
  // allowing permissionless pool creation by switching this flag to true
  // with a governance proposal.
  bool is_permissionless_pool_creation_enabled = 6
      [ (gogoproto.moretags) =
            "yaml:\"is_permissionless_pool_creation_enabled\"" ];

  // unrestricted_pool_creator_whitelist is a list of addresses that are
  // allowed to bypass restrictions on permissionless supercharged pool
  // creation, like pool_creation_enabled, restricted quote assets, no
  // double creation of pools, etc.
  repeated string unrestricted_pool_creator_whitelist = 7
      [ (gogoproto.moretags) = "yaml:\"unrestricted_pool_creator_whitelist\"" ];

  uint64 hook_gas_limit = 8
      [ (gogoproto.moretags) = "yaml:\"hook_gas_limit\"" ];
}
