syntax = "proto3";
// this is a legacy package that requires additional migration logic
// in order to use the correct package. Decision made to use legacy package path
// until clear steps for migration logic and the unknowns for state breaking are
// investigated for changing proto package.
package symphony.concentratedliquidity.v1beta1;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "symphony/lockup/lock.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/concentrated-liquidity/model";

// Position contains position's id, address, pool id, lower tick, upper tick
// join time, and liquidity.
message Position {
  uint64 position_id = 1 [ (gogoproto.moretags) = "yaml:\"position_id\"" ];
  string address = 2 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  uint64 pool_id = 3 [ (gogoproto.moretags) = "yaml:\"pool_id\"" ];
  int64 lower_tick = 4;
  int64 upper_tick = 5;
  google.protobuf.Timestamp join_time = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"join_time\""
  ];
  string liquidity = 7 [

    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"liquidity\"",
    (gogoproto.nullable) = false
  ];
}

// FullPositionBreakdown returns:
// - the position itself
// - the amount the position translates in terms of asset0 and asset1
// - the amount of claimable fees
// - the amount of claimable incentives
// - the amount of incentives that would be forfeited if the position was closed
// now
message FullPositionBreakdown {
  Position position = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.v1beta1.Coin asset0 = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  cosmos.base.v1beta1.Coin asset1 = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  repeated cosmos.base.v1beta1.Coin claimable_spread_rewards = 4 [
    (gogoproto.moretags) = "yaml:\"claimable_spread_rewards\"",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin claimable_incentives = 5 [
    (gogoproto.moretags) = "yaml:\"claimable_incentives\"",
    (gogoproto.nullable) = false
  ];
  repeated cosmos.base.v1beta1.Coin forfeited_incentives = 6 [
    (gogoproto.moretags) = "yaml:\"forfeited_incentives\"",
    (gogoproto.nullable) = false
  ];
}

message PositionWithPeriodLock {
  Position position = 1 [ (gogoproto.nullable) = false ];
  symphony.lockup.PeriodLock locks = 2 [ (gogoproto.nullable) = false ];
}